--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "babel-preset-expo": "~54.0.9",
+    "crypto-js": "^4.2.0",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
     "expo-document-picker": "~14.0.8",
