--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "babel-preset-expo": "~54.0.9",
     "crypto-js": "^4.2.0",
     "expo": "~54.0.30",
@@ -20,7 +20,9 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "i18next": "^25.7.3",
     "react": "19.1.0",
+    "react-i18next": "^16.5.0",
     "react-native": "0.81.5",
     "react-native-get-random-values": "~1.11.0"
   },
