--- a/DiarizeAI-Mobil/package.json
+++ b/DiarizeAI-Mobil/package.json
@@ -23,6 +23,7 @@
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-linear-gradient": "~15.0.8",
+    "expo-sensors": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "i18next": "^25.7.3",
