--- a/DiarizeAI-Mobil/package.json
+++ b/DiarizeAI-Mobil/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native-stack": "^7.9.0",
     "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.9",
+    "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
+    "docx": "^9.5.1",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
     "expo-document-picker": "~14.0.8",
