--- a/DiarizeAI-Mobil/package.json
+++ b/DiarizeAI-Mobil/package.json
@@ -30,6 +30,7 @@
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "i18next": "^25.7.3",
+    "pptxgenjs": "^4.0.1",
     "react": "19.1.0",
     "react-i18next": "^16.5.0",
     "react-native": "0.81.5",
